--- a/src/app/components/forms/change-password/change-password.component.html
+++ b/src/app/components/forms/change-password/change-password.component.html
@@ -40,7 +40,8 @@
   </div>
 
    <button class="cancel-button" (click)="closeDialog()" mat-button>Close</button>
-   <button class="save-button" (click)="changePasswordRequest()" mat-button>Change password</button>
+   <button class="save-button" (click)="changePasswordRequest()"
+           (keydown.enter)="changePasswordRequest()" mat-button>Change password</button>
   </form>
 
   </div>
