--- a/src/app/components/forms/notification-message/notification-message.component.html
+++ b/src/app/components/forms/notification-message/notification-message.component.html
@@ -1,7 +1,7 @@
-
-<div *ngFor="let notification of notifications">
-  <strong>DATE:</strong> {{notification.date}}
-  {{notification.message}}
+<div class="modal-body">
+  <div *ngFor="let notification of notifications">
+    <strong>DATE:</strong> {{notification.date}}
+    <strong>MESSAGE:</strong> {{notification.message}}
+  </div>
 </div>
-
 <button mat-button (click)="closeForm()">Close</button>
