--- a/src/app/components/forms/upload-image/upload-image.component.html
+++ b/src/app/components/forms/upload-image/upload-image.component.html
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-=======
-<h2>New image</h2>
->>>>>>> origin/zymante-etc
-
+<h2>Upload office plan</h2>
 <div *ngIf="selectedFile">
   <p>{{selectedFile.name}}</p>
 </div>
