--- a/src/app/components/forms/add-desks-form/add-desks-form.component.css
+++ b/src/app/components/forms/add-desks-form/add-desks-form.component.css
@@ -10,6 +10,10 @@ button {
   margin: 10px;
 }
 
+.mat-button-disabled {
+  background-color: #dcdcdc;
+}
+
 button:hover {
   border: 3px solid #1080a5b8;
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
