--- a/src/app/components/forms/add-desks-form/add-desks-form.component.html
+++ b/src/app/components/forms/add-desks-form/add-desks-form.component.html
@@ -1,11 +1,15 @@
+<h2>Create new Desk</h2>
 <div class="container-border"><div class="container"><mat-form-field>
   <mat-label>Desk name</mat-label>
   <input id="userid" [formControl]="deskName" matInput >
+  <mat-error *ngIf="deskName?.errors?.['required']">
+    Desk name is required
+  </mat-error>
 </mat-form-field>
 
 <div class="button-container">
-  <button class="cancel-button" mat-button (click)="closeForm()">Cancel</button>
-<button class="save-button" mat-button (click)="addNewDesk()">Add desk</button>
+  <button class="cancel-button" mat-button (click)="closeForm()" >Cancel</button>
+<button class="save-button" mat-button (click)="addNewDesk()" [disabled]="!deskName.valid">Add desk</button>
 </div>
 </div>
 </div>
