--- a/src/app/components/forms/add-new-room/add-new-room.component.html
+++ b/src/app/components/forms/add-new-room/add-new-room.component.html
@@ -1,9 +1,13 @@
+<h2>Add new Room</h2>
 <div class="container">
 <mat-form-field>
   <mat-label>Room Name</mat-label>
   <input id="userid" [formControl]="roomName" matInput formControlName="userId">
+  <mat-error *ngIf="roomName?.errors?.['required']">
+    Room name is required
+  </mat-error>
 </mat-form-field>
-  <div class="button-container"><button mat-button (click)="addNewRoom()">Add new room</button>
-  <button class="cancel-button" mat-button (click)="closeForm()">Cancel</button>
+  <div class="button-container"><button mat-button (click)="addNewRoom()" [disabled]="!roomName.valid">Add new room</button>
+  <button class="cancel-button" mat-button (click)="closeForm()" >Cancel</button>
   </div>
 </div>
