--- a/src/app/components/forms/add-new-room/add-new-room.component.scss
+++ b/src/app/components/forms/add-new-room/add-new-room.component.scss
@@ -13,6 +13,9 @@ padding: 10px;
 }
 
 
+.mat-button-disabled{
+  background-color: #dcdcdc;
+}
 button {
   background-color: #008cba;
   border-radius: 5px;
