--- a/src/app/components/forms/edit-user-form/edit-user-form.component.css
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.css
@@ -71,6 +71,10 @@ mat-form-field {
   color: white !important;
 }
 
+.mat-button-disabled {
+  background-color: #dcdcdc;
+}
+
 .default-floor-text {
   flex-wrap: wrap;
   text-align: justify;
