--- a/src/app/components/forms/notification-display/notification-display.component.scss
+++ b/src/app/components/forms/notification-display/notification-display.component.scss
@@ -13,22 +13,47 @@
   width: auto;
 }
 
-button {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+.dialogWidth{
+  width: 50vw;
+
 }
 
-button:hover {
-  transform: translateY(2px);
+.container {
+
+  font-size: 20px;
+  width: 90%;
+  margin: auto;
+}
 
 .cancel-button {
-  color: rgb(166, 16, 16) !important;
+  color: #a61010 !important;
   background-color: white !important;
 }
 
 .cancel-button:hover {
-  background-color: rgb(166, 16, 16) !important;
+  background-color: #a61010 !important;
   color: white !important;
   border: none !important;
-
 }
+
+button {
+  background-color: #008cba;
+  color: white;
+  font-size: smaller;
+  border-radius: 5px;
+  border: 1px solid #9999994b;
+  box-shadow: 0 4px 10px -6px #222;
+  text-align: right;
+  float:right;
+  margin: 20px 5px;
+}
+
+button:hover {
+  border: 3px solid #1080a5b8;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+  0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+button:active {
+  transform: translateY(3px);
 }
