--- a/src/app/components/forms/send-message-form/send-message-form.component.scss
+++ b/src/app/components/forms/send-message-form/send-message-form.component.scss
@@ -10,6 +10,10 @@
   border: none !important;
 }
 
+.mat-button-disabled{
+  background-color: #dcdcdc;
+}
+
 button {
   float:right;
   margin-top: 30px;
@@ -31,7 +35,7 @@ button:active {
   border: 1px solid #008cba;
   padding: 3px;
   width: 250px;
-  height: 230px;
+  height: auto;
 }
 
 
