--- a/src/app/components/reservation-history/reservation-history.component.scss
+++ b/src/app/components/reservation-history/reservation-history.component.scss
@@ -19,4 +19,19 @@ th, td {
   font-weight: bold !important;
 }
 
+th {
+  justify-content: center;
+  vertical-align: top;
+}
 
+td {
+  padding: 5px 10px;
+}
+
+table {
+  margin-top: 40px;
+}
+
+.title {
+  margin-top: 40px;
+}
