--- a/src/app/components/forms/send-message-form/send-message-form.component.scss
+++ b/src/app/components/forms/send-message-form/send-message-form.component.scss
@@ -15,7 +15,7 @@
 }
 
 button {
-  float:right;
+  float:right !important;
   margin-top: 30px;
   background-color: #008cba;
   color: white !important;
@@ -33,7 +33,7 @@ button:active {
 }
 .container {
   border: 1px solid #008cba;
-  padding: 3px;
+  padding: 10px;
   width: 250px;
   height: auto;
 }
