--- a/src/app/components/reservation-history/reservation-history.component.html
+++ b/src/app/components/reservation-history/reservation-history.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="reservation-history-table" fxFlex fxLayout="column">
-  <h2>My desk booking history</h2>
+  <h2 class="title">My desk booking history</h2>
 
   <div>
     <table matSort>
