--- a/src/app/components/forms/notification-display/notification-display.component.scss
+++ b/src/app/components/forms/notification-display/notification-display.component.scss
@@ -1,9 +1,8 @@
-
 .submit {
   margin: 5px;
   text-align: center;
   width: auto;
-  background-color: #008CBA;
+  background-color: #008cba;
   color: white;
 }
 
@@ -13,16 +12,15 @@
   width: auto;
 }
 
-.dialogWidth{
+.dialogWidth {
   width: 50vw;
-
 }
 
 .container {
-
   font-size: 20px;
   width: 90%;
   margin: auto;
+  line-height: 2;
 }
 
 .cancel-button {
@@ -44,14 +42,14 @@ button {
   border: 1px solid #9999994b;
   box-shadow: 0 4px 10px -6px #222;
   text-align: right;
-  float:right;
+  float: right;
   margin: 20px 5px;
 }
 
 button:hover {
   border: 3px solid #1080a5b8;
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-  0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:active {
