login page changed

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <form class="login-form" [formGroup]="loginFormGroup">
+<div class="container" fxFlex>
+  <form class="login-form" [formGroup]="loginFormGroup" fxFlexAlign="auto">
     <h1>Welcome to Desk Booking Application!</h1>
     <mat-form-field class="login-full-width" appearance="fill">
       <mat-label>User ID</mat-label>
