--- a/src/app/components/reservation-history/reservation-history.component.css
+++ b/src/app/components/reservation-history/reservation-history.component.css
@@ -36,4 +36,8 @@ table {
   margin-top: 40px;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 /*# sourceMappingURL=reservation-history.component.css.map */
